Fixed spacing issue in library chunk

--- a/src/css/boom/chunk.less
+++ b/src/css/boom/chunk.less
@@ -26,7 +26,7 @@
 		}
 
 		.b-tags-list {
-			margin: 0 -0.25em;
+			margin: -0.5rem 0 0 -0.75rem;
 		}
 	}
 
